# NodeUnion

./: .env.wsol  .gitignore  Cargo.toml  Idle_Resource_Platform_Plan.docx  README.md  Readme.md  TUI_CONFIGURATION.md  become-node-provider.sh  documentation.md  friend-submit-job.sh  run_docker_tests.sh  test-solana-integration.sh
crates/agent/: .env.example  Cargo.toml  README.md
crates/agent/src/: api.rs  app_state.rs  config.rs  container_manager.rs  container_monitor.rs  errors.rs  heartbeat.rs  idle_detector.rs  lib.rs  main.rs  models.rs  orchestrator_client.rs
crates/agent/tests/: api_test.rs  docker_integration_test.rs  idle_detector_test.rs
crates/db/: Cargo.toml
crates/db/src/: attempts.rs  entitlements_repo.rs  jobs_repo.rs  mod.rs  networks_repo.rs  node_repo.rs  schema.rs  settlements_repo.rs
crates/orchestrator/: Cargo.toml  README.md
crates/orchestrator/src/: api.rs  dashboard.rs  lib.rs  main.rs  model.rs  solana_client.rs  state.rs  stellar_client.rs
crates/orchestrator/src/db/: attempts.rs  entitlements_repo.rs  jobs_repo.rs  mod.rs  networks_repo.rs  node_repo.rs  schema.rs  settlements_repo.rs
dashboard/: .eslintrc.js  Dockerfile  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.js
dashboard/src/: index.css
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/docs/: page.tsx
dashboard/src/app/networks/: NetworksPageClient.tsx  page.tsx
dashboard/src/app/onboarding/: page.tsx
dashboard/src/app/portfolio/: page.tsx
dashboard/src/app/provider/: ProviderPageClient.tsx  page.tsx
dashboard/src/components/: app-shell.tsx  copy-button.tsx  job-status-badge.tsx  live-badge.tsx  metric-card.tsx  sparkline.tsx  status-dot.tsx  terminal-block.tsx  theme-toggle.tsx
dashboard/src/components/cli-builder/: CLIBuilderForm.tsx  CLIBuilderPageClient.tsx  CLIPreviewTerminal.tsx  CommandReference.tsx  useCommandBuilder.ts
dashboard/src/components/cost-estimator/: CostBreakdownChart.tsx  CostEstimatorPageClient.tsx  EstimatorInputs.tsx  EstimatorResults.tsx  MiniEstimator.tsx  PresetCards.tsx
dashboard/src/components/jobs/: JobDetailPageClient.tsx  JobMetaPanel.tsx  JobTerminal.tsx  LiveDurationCounter.tsx  LogLine.tsx  TerminalHeader.tsx
dashboard/src/components/maps/: MapControls.tsx  MapFilterBar.tsx  MapSummaryStrip.tsx  MapTooltip.tsx  NodeHealthMap.tsx  NodeMarker.tsx
dashboard/src/components/onboarding/: NodePreviewCard.tsx  OnboardingPageClient.tsx  StepAgentSetup.tsx  StepMachineDetails.tsx  StepNetworkSelect.tsx  StepWelcome.tsx  (+3 more)
dashboard/src/lib/: dashboard-data.ts  node-utils.ts  orchestrator-discovery.ts  orchestrator-realtime.ts  orchestrator.ts  pricing.ts  region-coordinates.ts  topology-utils.ts
deploy/: agent.service  postgres_schema.sql
scripts/: setup-wsol-devnet.sh
solana/: Anchor.toml  Cargo.toml  README.md
solana/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
solana/programs/nodeunion_billing/: Cargo.toml
solana/programs/nodeunion_billing/src/: lib.rs
stellar-container/: .gitignore  BUILD_REPORT.md  Cargo.toml  README.md  soroban.toml  test.sh
stellar-container/contracts/nodeunion_billing/: Cargo.toml
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1776482861021091  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
test_node_app/: Dockerfile  app.js
(+24 files in other folders)
