[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
name = "db"
path = "src/mod.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }