[package]
name = "nodeunion-db"
version = "0.1.0"
edition = "2021"
description = "NodeUnion shared database access and schema helpers"
license = "MIT"

[lib]
name = "db"
path = "src/mod.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }